--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <img class="logo" src="img/logo-pop-montreal.svg" alt="Logo Pop Montréal" />
@@ -25,15 +31,17 @@
       <img src="img/logo-film.svg" alt="Logo Film Pop" />
       <img src="img/logo-kids.svg" alt="Logo Kids Pop" />
     </div>
-    <h3 class="news-title">Nouvelles</h3>
-    <h2 class="download-title">Télécharge l’app du festival</h2>
-    <p class="download-content mobile">
-      Télécharger depuis <a href="#">l’app store</a> ou le
-      <a href="#">play store</a>
-    </p>
-    <p class="download-content desktop">
-      L’application n’est pas disponible sur desktop.
-    </p>
+    <div class="nouvelles-section">
+      <h3 class="news-title">Nouvelles</h3>
+      <h2 class="download-title">Télécharge l’app du festival</h2>
+      <p class="download-content mobile">
+        Télécharger depuis <a href="#">l’app store</a> ou le
+        <a href="#">play store</a>
+      </p>
+      <p class="download-content desktop">
+        L’application n’est pas disponible sur desktop.
+      </p>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
